--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "component-box",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A little component cacher",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["component"],
+  "keywords": [
+    "component"
+  ],
   "author": "Jon Gacnik <jon@folderstudio.com> (http://jongacnik.com)",
   "license": "MIT",
   "dependencies": {
