--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A little component cacher",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "keywords": [
     "component"
@@ -14,5 +14,8 @@
   "dependencies": {
     "nanoassert": "^1.1.0",
     "xtend": "^4.0.1"
+  },
+  "devDependencies": {
+    "tape": "^4.8.0"
   }
 }
